More files and folders added and updates on cityharvest website

--- a/cityharvest/app/about.html
+++ b/cityharvest/app/about.html
@@ -121,7 +121,7 @@
         <!-- == About == -->
         <section id="about">
             <div class="container">
-                <h1 class="about-title">About Us</h1>
+                <h1 class="about-title">About</h1>
                 <div class="even-columns">
                     <div class="card" data-aos="fade-up" data-aos-delay="100">
                         <div class="card-body">
@@ -203,11 +203,15 @@
                             <div class="first-service">
                                 First Service:
                                 <br>
+                                <small><b>ENGLISH</b></small>
+                                <br>
                                 <small><b>7:00 AM - 9:00 AM</b></small>
                             </div>
                             <hr>
                             <div class="second-service">
                                 Second Service:
+                                <br>
+                                <small><b>SWAHILI</b></small>
                                 <br>
                                 <small><b>09:30 AM - 12:30 PM</b></small>
                             </div>
