--- a/cityharvest/app/ch_dodoma.html
+++ b/cityharvest/app/ch_dodoma.html
@@ -78,7 +78,7 @@
                 </li>
                 <li class="nav-item"><a href="sermons.html" class="nav-link change-Color">Sermons</a></li>
                 <li class="nav-item"><a href="get_involved.html" class="nav-link change-Color">Get Involved</a></li>
-                
+
                 <li class="nav-item"><a href="events.html" class="nav-link change-Color">Events</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Ministries</a></li>
                 <li class="nav-item"><a href="contact.html" class="nav-link change-Color">Contact</a></li>
@@ -115,6 +115,38 @@
                                 <i class="fab fa-twitter"></i>
                             </a>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- == Pastors == -->
+        <section id="pastors">
+            <div class="container">
+                <h1 class="pastors-title">Our Pastors</h1>
+                <div class="row even-columns">
+                    <div class="pastors-img">
+                        <img src="../assets/img/pastors/lead-pastors.png" alt="">
+                    </div>
+                    <div class="pastors-txt">
+                        <h1 class="lead"> WORD FROM OUR PASTORS</h1>
+                        <h1>Rev, Eng. Lucas and Happiness Mgalula</h1>
+                        <p class="text-justify">
+                            <br>
+                            City Harvest is a church designed for college students and young professionals. It is a home
+                            away from home. It is a place where you will discover your talents, nurture them, learn from
+                            others, and others learn from you.
+                            <br>
+                            <br>
+                            Ever since the church started, we have strived to reach college students with the message of
+                            the love of Christ, we have seen many of them get transformed and now, after college, being
+                            tools to transform other college students and their fellow professionals.
+                            <br>
+                            <br>
+                            We personally welcome you to be part of this great family.
+                            <br>
+                            <b>Karibu sana and Be Transformed to transform.</b>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -168,11 +200,15 @@
                             <div class="first-service">
                                 First Service:
                                 <br>
+                                <small><b>ENGLISH</b></small>
+                                <br>
                                 <small><b>7:00 AM - 9:00 AM</b></small>
                             </div>
                             <hr>
                             <div class="second-service">
                                 Second Service:
+                                <br>
+                                <small><b>SWAHILI</b></small>
                                 <br>
                                 <small><b>09:30 AM - 12:30 PM</b></small>
                             </div>
