--- a/cityharvest/app/events.html
+++ b/cityharvest/app/events.html
@@ -359,11 +359,15 @@
                             <div class="first-service">
                                 First Service:
                                 <br>
+                                <small><b>ENGLISH</b></small>
+                                <br>
                                 <small><b>7:00 AM - 9:00 AM</b></small>
                             </div>
                             <hr>
                             <div class="second-service">
                                 Second Service:
+                                <br>
+                                <small><b>SWAHILI</b></small>
                                 <br>
                                 <small><b>09:30 AM - 12:30 PM</b></small>
                             </div>
