--- a/cityharvest/index.html
+++ b/cityharvest/index.html
@@ -53,6 +53,17 @@
                             <li class="nav-item">
                                 <a href="app/beliefs.html" class="nav-link">What We Believe</a>
                             </li>
+                            <li class="nav-item dropdown-services">
+                                <a href="#" class="nav-link">Services <i class="fas fa-angle-down"></i></a>
+                                <ul class="dropdown-menu-services">
+                                    <li class="nav-item">
+                                        <a href="app/contact.html" class="nav-link">Day Care</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="app/ch_kigamboni.html" class="nav-link">Njopeka Project</a>
+                                    </li>
+                                </ul>
+                            </li>
                             <li class="nav-item dropdown-location">
                                 <a href="#" class="nav-link">Locations <i class="fas fa-angle-down"></i></a>
                                 <ul class="dropdown-menu-location">
@@ -76,7 +87,21 @@
                         </ul>
                     </a>
                 </li>
-                <li class="nav-item"><a href="app/sermons.html" class="nav-link change-Color">Sermons</a></li>
+                <li class="nav-item dropdown-sermons">
+                    <a href="#" class="nav-link change-Color">Sermons
+                        <ul class="dropdown-menu-sermons">
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">Audio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="app/sermons.html" class="nav-link">Video</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="app/written_sermons.html" class="nav-link">Written Sermons</a>
+                            </li>
+                        </ul>
+                    </a>
+                </li>
                 <li class="nav-item"><a href="app/get_involved.html" class="nav-link change-Color">Get Involved</a></li>
                 <li class="nav-item dropdown-resources">
                     <a href="#" class="nav-link change-Color">Resources
@@ -87,14 +112,43 @@
                             <li class="nav-item">
                                 <a href="app/reports.html" class="nav-link">Reports</a>
                             </li>
-                            <li class="nav-item">
-                                <a href="app/written_sermons.html" class="nav-link">Written Sermons</a>
-                            </li>
                         </ul>
                     </a>
                 </li>
                 <li class="nav-item"><a href="app/events.html" class="nav-link change-Color">Events</a></li>
-                <li class="nav-item"><a href="" class="nav-link change-Color">Ministries</a></li>
+                <li class="nav-item dropdown-ministries">
+                    <a href="#" class="nav-link change-Color">Ministries
+                        <ul class="dropdown-menu-ministries">
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">CMF</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">WWK</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">Youth</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">Children Ministry</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">Evangelism</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">Mission</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">Campus Ministry</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">Well.come</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">Harvest School of ministry</a>
+                            </li>
+                        </ul>
+                    </a>
+                </li>
                 <li class="nav-item"><a href="app/contact.html" class="nav-link change-Color">Contact</a></li>
             </ul>
             <div class="flex-space-between login-give">
@@ -383,8 +437,7 @@
         <!-- == Abundant Harvest == -->
         <section id="abundant-harvest">
             <div class="container">
-                <img src="assets/img/church/abundant-harvest12-01.jpg" alt="" class="img-fluid" data-aos="fade-left"
-                    data-aos-delay="100">
+                <img src="assets/img/church/abundant-harvest12-01.jpg" alt="" class="img-fluid">
             </div>
         </section>
 
@@ -400,11 +453,15 @@
                             <div class="first-service">
                                 First Service:
                                 <br>
+                                <small><b>ENGLISH</b></small>
+                                <br>
                                 <small><b>7:00 AM - 9:00 AM</b></small>
                             </div>
                             <hr>
                             <div class="second-service">
                                 Second Service:
+                                <br>
+                                <small><b>SWAHILI</b></small>
                                 <br>
                                 <small><b>09:30 AM - 12:30 PM</b></small>
                             </div>
