Beautiful updates have been made

--- a/cityharvest/app/ch_india.html
+++ b/cityharvest/app/ch_india.html
@@ -18,7 +18,7 @@
     <!-- === AOS (Animation On Scroll CSS) CDN === -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- === Title === -->
-    <title>City Harvest Church | Contact</title>
+    <title>City Harvest Church | India</title>
     <!-- === CSS === -->
     <link rel="stylesheet" type="text/css" href="../assets/css/ch_india.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/main.css">
@@ -42,7 +42,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item"><a href="../index.html" class="nav-link change-Color">Home</a></li>
                 <li class="nav-item dropdown">
-                    <a href="#home" class="nav-link change-Color">About
+                    <a href="#home" class="nav-link active">About
                         <ul class="dropdown-menu">
                             <li class="nav-item">
                                 <a href="about.html" class="nav-link">Who We Are</a>
@@ -52,6 +52,17 @@
                             </li>
                             <li class="nav-item">
                                 <a href="beliefs.html" class="nav-link">What We Believe</a>
+                            </li>
+                            <li class="nav-item dropdown-services">
+                                <a href="#" class="nav-link">Services <i class="fas fa-angle-down"></i></a>
+                                <ul class="dropdown-menu-services">
+                                    <li class="nav-item">
+                                        <a href="daycare.html" class="nav-link">Day Care</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="njopeka.html" class="nav-link">Njopeka Project</a>
+                                    </li>
+                                </ul>
                             </li>
                             <li class="nav-item dropdown-location">
                                 <a href="#" class="nav-link">Locations <i class="fas fa-angle-down"></i></a>
@@ -76,7 +87,21 @@
                         </ul>
                     </a>
                 </li>
-                <li class="nav-item"><a href="sermons.html" class="nav-link change-Color">Sermons</a></li>
+                <li class="nav-item dropdown-sermons">
+                    <a href="#" class="nav-link change-Color">Sermons
+                        <ul class="dropdown-menu-sermons">
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">Audio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="sermons.html" class="nav-link">Video</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="written_sermons.html" class="nav-link">Written Sermons</a>
+                            </li>
+                        </ul>
+                    </a>
+                </li>
                 <li class="nav-item"><a href="get_involved.html" class="nav-link change-Color">Get Involved</a></li>
                 <li class="nav-item dropdown-resources">
                     <a href="#" class="nav-link change-Color">Resources
@@ -87,14 +112,44 @@
                             <li class="nav-item">
                                 <a href="reports.html" class="nav-link">Reports</a>
                             </li>
-                            <li class="nav-item">
-                                <a href="written_sermons.html" class="nav-link">Written Sermons</a>
-                            </li>
                         </ul>
                     </a>
                 </li>
                 <li class="nav-item"><a href="events.html" class="nav-link change-Color">Events</a></li>
-                <li class="nav-item"><a href="" class="nav-link change-Color">Ministries</a></li>
+                <li class="nav-item dropdown-ministries">
+                    <a href="#" class="nav-link change-Color">Ministries
+                        <ul class="dropdown-menu-ministries">
+                            <li class="nav-item">
+                                <a href="cmf.html" class="nav-link">CMF</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="wwk.html" class="nav-link">WWK</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="youth.html" class="nav-link">Youth</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="kids.html" class="nav-link">Children Ministry</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="evangelism.html" class="nav-link">Evangelism</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="mission.html" class="nav-link">Mission</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="campus_ministry.html" class="nav-link">Campus Ministry</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="well_come.html" class="nav-link">Well.come</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="harvest_school_ministry.html" class="nav-link">Harvest School of
+                                    ministry</a>
+                            </li>
+                        </ul>
+                    </a>
+                </li>
                 <li class="nav-item"><a href="contact.html" class="nav-link change-Color">Contact</a></li>
             </ul>
             <div class="flex-space-between login-give">
@@ -183,7 +238,8 @@
                                 <b>PLOT</b> 453 Bengaluru.
                             </p>
                         </div>
-                        <i class="fas fa-map-marker-alt"></i>
+                        <a href="https://www.google.pl/maps/dir//Hennur+Bagalur+Rd,+Hennur+Bagalur+Main+Road,+DR+Bendre+Layout,+Kuvempu+Layout,+Kothanur,+Bengaluru,+Karnataka,+India/@13.0725073,77.609832,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3bae19f79cb7630d:0x6a64801988f2c220!2m2!1d77.6510319!2d13.072427?entry=ttu"
+                            class="text-primary"><i class="fas fa-map-marker-alt"></i></a>
                     </div>
                     <div class="card p-3" data-aos="fade-left" data-aos-delay="100">
                         <div class="left-our">
@@ -192,10 +248,10 @@
                         <div class="inner-txt">
                             <h2>Phone</h2>
                             <p>
-                                +975 654 340 122
+                                <a href="tel:+975654340122">+975 654 340 122</a>
                             </p>
                         </div>
-                        <i class="fas fa-phone"></i>
+                        <a href="tel:+975654340122"><i class="fas fa-phone"></i></a>
                     </div>
                 </div>
         </section>
