--- a/cityharvest/index.html
+++ b/cityharvest/index.html
@@ -57,10 +57,10 @@
                                 <a href="#" class="nav-link">Services <i class="fas fa-angle-down"></i></a>
                                 <ul class="dropdown-menu-services">
                                     <li class="nav-item">
-                                        <a href="app/contact.html" class="nav-link">Day Care</a>
+                                        <a href="app/daycare.html" class="nav-link">Day Care</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="app/ch_kigamboni.html" class="nav-link">Njopeka Project</a>
+                                        <a href="app/njopeka.html" class="nav-link">Njopeka Project</a>
                                     </li>
                                 </ul>
                             </li>
@@ -120,31 +120,32 @@
                     <a href="#" class="nav-link change-Color">Ministries
                         <ul class="dropdown-menu-ministries">
                             <li class="nav-item">
-                                <a href="#" class="nav-link">CMF</a>
+                                <a href="app/cmf.html" class="nav-link">CMF</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">WWK</a>
+                                <a href="app/wwk.html" class="nav-link">WWK</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">Youth</a>
+                                <a href="app/youth.html" class="nav-link">Youth</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">Children Ministry</a>
+                                <a href="app/kids.html" class="nav-link">Children Ministry</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">Evangelism</a>
+                                <a href="app/evangelism.html" class="nav-link">Evangelism</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">Mission</a>
+                                <a href="app/mission.html" class="nav-link">Mission</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">Campus Ministry</a>
+                                <a href="app/campus_ministry.html" class="nav-link">Campus Ministry</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">Well.come</a>
+                                <a href="app/well_come.html" class="nav-link">Well.come</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">Harvest School of ministry</a>
+                                <a href="app/harvest_school_ministry.html" class="nav-link">Harvest School of
+                                    ministry</a>
                             </li>
                         </ul>
                     </a>
@@ -314,7 +315,7 @@
                             <div class="card-btns">
                                 <a href="app/contact.html" class="btn">View Details</a>
                                 <a href="https://www.google.pl/maps/dir//TAG+City+Harvest+Church,+Dar+es+Salaam/@-6.6525454,39.1552698,13z/data=!3m1!4b1!4m8!4m7!1m0!1m5!1m1!1s0x185c56d87bbebbcd:0xc7de11771fe2e7b!2m2!1d39.1964697!2d-6.6526324?entry=ttu"
-                                    target="_blank" class="btn direction">Get Directions</a>
+                                    class="btn direction">Get Directions</a>
                             </div>
                         </div>
                         <div class="campus-text">
@@ -324,7 +325,7 @@
                     <div class="card" data-aos="fade-up" data-aos-delay="100">
                         <div class="card-img">
                             <div class="card-inner">
-                                <img src="assets/img/church/ch-kg2.png" alt="" class="card-img-top img-fluid">
+                                <img src="assets/img/church/ch-kg2.jpg" alt="" class="card-img-top img-fluid">
                             </div>
                         </div>
                         <div class="card-body">
@@ -337,7 +338,7 @@
                             <div class="card-btns">
                                 <a href="app/ch_kigamboni.html" class="btn">View Details</a>
                                 <a href="https://www.google.pl/maps/dir//TAG+City+Harvest+Church,+Kigamboni,+4CF6%2BWMQ,+Dar+es+Salaam/@-6.8750786,39.3705436,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x185db5e07cd845b7:0x9d739b0eb0371519!2m2!1d39.4117435!2d-6.8751656?entry=ttu"
-                                    target="_blank" class="btn direction">Get Directions</a>
+                                    class="btn direction">Get Directions</a>
                             </div>
                         </div>
                         <div class="campus-text">
@@ -360,7 +361,7 @@
                             <div class="card-btns">
                                 <a href="app/ch_dodoma.html" class="btn">View Details</a>
                                 <a href="https://www.google.pl/maps/dir//City+Harvest+Church+Dodoma,+Dodoma/@-6.1795814,35.7956972,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x184de3723c58f063:0xcf8154744895078f!2m2!1d35.8368971!2d-6.1796683?entry=ttu"
-                                    target="_blank" class="btn direction">Get Directions</a>
+                                    class="btn direction">Get Directions</a>
                             </div>
                         </div>
                         <div class="campus-text">
@@ -386,7 +387,7 @@
                             <div class="card-btns">
                                 <a href="app/ch_mwanza.html" class="btn">View Details</a>
                                 <a href="https://www.google.pl/maps/dir//Rock+city+mall,+Mwanza/@-6.7780228,39.2189697,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x185c4db2660de561:0x1d3a5d62d5b3eb67!2m2!1d39.2601696!2d-6.7781098?entry=ttu"
-                                    target="_blank" class="btn direction">Get Directions</a>
+                                    class="btn direction">Get Directions</a>
                             </div>
                         </div>
                         <div class="campus-text">
@@ -409,7 +410,7 @@
                             <div class="card-btns">
                                 <a href="app/ch_india.html" class="btn">View Details</a>
                                 <a href="https://www.google.pl/maps/dir//Hennur+Bagalur+Rd,+Hennur+Bagalur+Main+Road,+DR+Bendre+Layout,+Kuvempu+Layout,+Kothanur,+Bengaluru,+Karnataka,+India/@13.0725073,77.609832,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3bae19f79cb7630d:0x6a64801988f2c220!2m2!1d77.6510319!2d13.072427?entry=ttu"
-                                    target="_blank" class="btn direction">Get Directions</a>
+                                    class="btn direction">Get Directions</a>
                             </div>
                         </div>
                         <div class="campus-text">
@@ -437,7 +438,8 @@
         <!-- == Abundant Harvest == -->
         <section id="abundant-harvest">
             <div class="container">
-                <img src="assets/img/church/abundant-harvest12-01.jpg" alt="" class="img-fluid">
+                <img src="assets/img/about/abundant-harvest.jpg" alt="Abundant Harvest" class="img-fluid"
+                    data-aos="fade-left" data-aos-delay="100">
             </div>
         </section>
 
