--- a/cityharvest/app/ch_dodoma.html
+++ b/cityharvest/app/ch_dodoma.html
@@ -18,7 +18,7 @@
     <!-- === AOS (Animation On Scroll CSS) CDN === -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- === Title === -->
-    <title>City Harvest Church | Contact</title>
+    <title>City Harvest Church | Dodoma</title>
     <!-- === CSS === -->
     <link rel="stylesheet" type="text/css" href="../assets/css/ch_dodoma.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/main.css">
@@ -42,7 +42,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item"><a href="../index.html" class="nav-link change-Color">Home</a></li>
                 <li class="nav-item dropdown">
-                    <a href="#home" class="nav-link change-Color">About
+                    <a href="#home" class="nav-link active">About
                         <ul class="dropdown-menu">
                             <li class="nav-item">
                                 <a href="about.html" class="nav-link">Who We Are</a>
@@ -52,6 +52,17 @@
                             </li>
                             <li class="nav-item">
                                 <a href="beliefs.html" class="nav-link">What We Believe</a>
+                            </li>
+                            <li class="nav-item dropdown-services">
+                                <a href="#" class="nav-link">Services <i class="fas fa-angle-down"></i></a>
+                                <ul class="dropdown-menu-services">
+                                    <li class="nav-item">
+                                        <a href="daycare.html" class="nav-link">Day Care</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="njopeka.html" class="nav-link">Njopeka Project</a>
+                                    </li>
+                                </ul>
                             </li>
                             <li class="nav-item dropdown-location">
                                 <a href="#" class="nav-link">Locations <i class="fas fa-angle-down"></i></a>
@@ -76,11 +87,69 @@
                         </ul>
                     </a>
                 </li>
-                <li class="nav-item"><a href="sermons.html" class="nav-link change-Color">Sermons</a></li>
+                <li class="nav-item dropdown-sermons">
+                    <a href="#" class="nav-link change-Color">Sermons
+                        <ul class="dropdown-menu-sermons">
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">Audio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="sermons.html" class="nav-link">Video</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="written_sermons.html" class="nav-link">Written Sermons</a>
+                            </li>
+                        </ul>
+                    </a>
+                </li>
                 <li class="nav-item"><a href="get_involved.html" class="nav-link change-Color">Get Involved</a></li>
-
+                <li class="nav-item dropdown-resources">
+                    <a href="#" class="nav-link change-Color">Resources
+                        <ul class="dropdown-menu-resources">
+                            <li class="nav-item">
+                                <a href="articles.html" class="nav-link">Articles</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="reports.html" class="nav-link">Reports</a>
+                            </li>
+                        </ul>
+                    </a>
+                </li>
                 <li class="nav-item"><a href="events.html" class="nav-link change-Color">Events</a></li>
-                <li class="nav-item"><a href="" class="nav-link change-Color">Ministries</a></li>
+                <li class="nav-item dropdown-ministries">
+                    <a href="#" class="nav-link change-Color">Ministries
+                        <ul class="dropdown-menu-ministries">
+                            <li class="nav-item">
+                                <a href="cmf.html" class="nav-link">CMF</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="wwk.html" class="nav-link">WWK</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="youth.html" class="nav-link">Youth</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="kids.html" class="nav-link">Children Ministry</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="evangelism.html" class="nav-link">Evangelism</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="mission.html" class="nav-link">Mission</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="campus_ministry.html" class="nav-link">Campus Ministry</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="well_come.html" class="nav-link">Well.come</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="harvest_school_ministry.html" class="nav-link">Harvest School of
+                                    ministry</a>
+                            </li>
+                        </ul>
+                    </a>
+                </li>
                 <li class="nav-item"><a href="contact.html" class="nav-link change-Color">Contact</a></li>
             </ul>
             <div class="flex-space-between login-give">
@@ -169,7 +238,8 @@
                                 <b>PLOT</b> 458 Iyumbu.
                             </p>
                         </div>
-                        <i class="fas fa-map-marker-alt"></i>
+                        <a href="https://www.google.pl/maps/dir//City+Harvest+Church+Dodoma,+Dodoma/@-6.1795814,35.7956972,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x184de3723c58f063:0xcf8154744895078f!2m2!1d35.8368971!2d-6.1796683?entry=ttu"
+                            class="text-primary"><i class="fas fa-map-marker-alt"></i></a>
                     </div>
                     <div class="card p-3" data-aos="fade-left" data-aos-delay="100">
                         <div class="left-our">
@@ -178,12 +248,12 @@
                         <div class="inner-txt">
                             <h2>Phone</h2>
                             <p>
-                                +255 759 704 960
+                                <a href="tel:+255759704960">+255 759 704 960</a>
                                 <br>
-                                +255 715 988 819
+                                <a href="tel:+255715988819">+255 715 988 819</a>
                             </p>
                         </div>
-                        <i class="fas fa-phone"></i>
+                        <a href="tel:+255759704960"><i class="fas fa-phone"></i></a>
                     </div>
                 </div>
         </section>
