--- a/cityharvest/app/contact.html
+++ b/cityharvest/app/contact.html
@@ -53,6 +53,17 @@
                             <li class="nav-item">
                                 <a href="beliefs.html" class="nav-link">What We Believe</a>
                             </li>
+                            <li class="nav-item dropdown-services">
+                                <a href="#" class="nav-link">Services <i class="fas fa-angle-down"></i></a>
+                                <ul class="dropdown-menu-services">
+                                    <li class="nav-item">
+                                        <a href="daycare.html" class="nav-link">Day Care</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="njopeka.html" class="nav-link">Njopeka Project</a>
+                                    </li>
+                                </ul>
+                            </li>
                             <li class="nav-item dropdown-location">
                                 <a href="#" class="nav-link">Locations <i class="fas fa-angle-down"></i></a>
                                 <ul class="dropdown-menu-location">
@@ -76,7 +87,21 @@
                         </ul>
                     </a>
                 </li>
-                <li class="nav-item"><a href="sermons.html" class="nav-link change-Color">Sermons</a></li>
+                <li class="nav-item dropdown-sermons">
+                    <a href="#" class="nav-link change-Color">Sermons
+                        <ul class="dropdown-menu-sermons">
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">Audio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="sermons.html" class="nav-link">Video</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="written_sermons.html" class="nav-link">Written Sermons</a>
+                            </li>
+                        </ul>
+                    </a>
+                </li>
                 <li class="nav-item"><a href="get_involved.html" class="nav-link change-Color">Get Involved</a></li>
                 <li class="nav-item dropdown-resources">
                     <a href="#" class="nav-link change-Color">Resources
@@ -87,15 +112,45 @@
                             <li class="nav-item">
                                 <a href="reports.html" class="nav-link">Reports</a>
                             </li>
-                            <li class="nav-item">
-                                <a href="written_sermons.html" class="nav-link">Written Sermons</a>
-                            </li>
                         </ul>
                     </a>
                 </li>
                 <li class="nav-item"><a href="events.html" class="nav-link change-Color">Events</a></li>
-                <li class="nav-item"><a href="" class="nav-link change-Color">Ministries</a></li>
-                <li class="nav-item"><a href="#home" class="nav-link active">Contact</a></li>
+                <li class="nav-item dropdown-ministries">
+                    <a href="#" class="nav-link change-Color">Ministries
+                        <ul class="dropdown-menu-ministries">
+                            <li class="nav-item">
+                                <a href="cmf.html" class="nav-link">CMF</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="wwk.html" class="nav-link">WWK</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="youth.html" class="nav-link">Youth</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="kids.html" class="nav-link">Children Ministry</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="evangelism.html" class="nav-link">Evangelism</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="mission.html" class="nav-link">Mission</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="campus_ministry.html" class="nav-link">Campus Ministry</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="well_come.html" class="nav-link">Well.come</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="harvest_school_ministry.html" class="nav-link">Harvest School of
+                                    ministry</a>
+                            </li>
+                        </ul>
+                    </a>
+                </li>
+                <li class="nav-item"><a href="contact.html" class="nav-link active">Contact</a></li>
             </ul>
             <div class="flex-space-between login-give">
                 <a href="#" class="btn btn-outline-primary login">Login</a>
@@ -153,7 +208,8 @@
                                 P.O.BOX 38125 Dar es Salaam.
                             </p>
                         </div>
-                        <i class="fas fa-map-marker-alt"></i>
+                        <a href="https://www.google.pl/maps/dir//TAG+City+Harvest+Church,+Dar+es+Salaam/@-6.6525454,39.1552698,13z/data=!3m1!4b1!4m8!4m7!1m0!1m5!1m1!1s0x185c56d87bbebbcd:0xc7de11771fe2e7b!2m2!1d39.1964697!2d-6.6526324?entry=ttu"
+                            class="text-primary"><i class="fas fa-map-marker-alt"></i></a>
                     </div>
                     <div class="card p-3" data-aos="fade-left" data-aos-delay="100">
                         <div class="left-our">
@@ -162,10 +218,10 @@
                         <div class="inner-txt">
                             <h2>Website</h2>
                             <p>
-                                www.cityharvestdar.or.tz
+                                <a href="https://www.cityharvestdar.or.tz">www.cityharvestdar.or.tz</a>
                             </p>
                         </div>
-                        <i class="fas fa-globe"></i>
+                        <a href="https://www.cityharvestdar.or.tz"><i class="fas fa-globe"></i></a>
                     </div>
                 </div>
                 <div class="even-columns">
@@ -176,10 +232,11 @@
                         <div class="inner-txt">
                             <h2>Email</h2>
                             <p>
-                                cityharvestdar@yahoo.com
+                                <a href="mailto:cityharvestdar@yahoo.com" class="text-dark">cityharvestdar@yahoo.com</a>
                             </p>
                         </div>
-                        <i class="fas fa-envelope"></i>
+                        <a href="mailto:cityharvestdar@yahoo.com" class="text-primary"><i
+                                class="fas fa-envelope"></i></a>
                     </div>
                     <div class="card p-3" data-aos="fade-left" data-aos-delay="100">
                         <div class="left-our">
@@ -188,10 +245,10 @@
                         <div class="inner-txt">
                             <h2>Phone</h2>
                             <p>
-                                +255 654 340 122
+                                <a href="tel:+255654340122" class="text-dark">+255 654 340 122</a>
                             </p>
                         </div>
-                        <i class="fas fa-phone"></i>
+                        <a href="tel:+255654340122" class="text-primary"><i class="fas fa-phone"></i></a>
                     </div>
                 </div>
             </div>
