--- a/cityharvest/app/get_involved.html
+++ b/cityharvest/app/get_involved.html
@@ -18,7 +18,7 @@
     <!-- === AOS (Animation On Scroll CSS) CDN === -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- === Title === -->
-    <title>City Harvest Church | Contact</title>
+    <title>City Harvest Church | Get Involved</title>
     <!-- === CSS === -->
     <link rel="stylesheet" type="text/css" href="../assets/css/get_involved.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/main.css">
@@ -42,7 +42,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item"><a href="../index.html" class="nav-link change-Color">Home</a></li>
                 <li class="nav-item dropdown">
-                    <a href="#home" class="nav-link change-Color">About
+                    <a href="#" class="nav-link change-Color">About
                         <ul class="dropdown-menu">
                             <li class="nav-item">
                                 <a href="about.html" class="nav-link">Who We Are</a>
@@ -52,6 +52,17 @@
                             </li>
                             <li class="nav-item">
                                 <a href="beliefs.html" class="nav-link">What We Believe</a>
+                            </li>
+                            <li class="nav-item dropdown-services">
+                                <a href="#" class="nav-link">Services <i class="fas fa-angle-down"></i></a>
+                                <ul class="dropdown-menu-services">
+                                    <li class="nav-item">
+                                        <a href="daycare.html" class="nav-link">Day Care</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="njopeka.html" class="nav-link">Njopeka Project</a>
+                                    </li>
+                                </ul>
                             </li>
                             <li class="nav-item dropdown-location">
                                 <a href="#" class="nav-link">Locations <i class="fas fa-angle-down"></i></a>
@@ -76,7 +87,21 @@
                         </ul>
                     </a>
                 </li>
-                <li class="nav-item"><a href="sermons.html" class="nav-link change-Color">Sermons</a></li>
+                <li class="nav-item dropdown-sermons">
+                    <a href="#" class="nav-link change-Color">Sermons
+                        <ul class="dropdown-menu-sermons">
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">Audio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="sermons.html" class="nav-link">Video</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="written_sermons.html" class="nav-link">Written Sermons</a>
+                            </li>
+                        </ul>
+                    </a>
+                </li>
                 <li class="nav-item"><a href="#home" class="nav-link active">Get Involved</a></li>
                 <li class="nav-item dropdown-resources">
                     <a href="#" class="nav-link change-Color">Resources
@@ -87,14 +112,44 @@
                             <li class="nav-item">
                                 <a href="reports.html" class="nav-link">Reports</a>
                             </li>
-                            <li class="nav-item">
-                                <a href="written_sermons.html" class="nav-link">Written Sermons</a>
-                            </li>
                         </ul>
                     </a>
                 </li>
                 <li class="nav-item"><a href="events.html" class="nav-link change-Color">Events</a></li>
-                <li class="nav-item"><a href="" class="nav-link change-Color">Ministries</a></li>
+                <li class="nav-item dropdown-ministries">
+                    <a href="#" class="nav-link change-Color">Ministries
+                        <ul class="dropdown-menu-ministries">
+                            <li class="nav-item">
+                                <a href="cmf.html" class="nav-link">CMF</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="wwk.html" class="nav-link">WWK</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="youth.html" class="nav-link">Youth</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="kids.html" class="nav-link">Children Ministry</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="evangelism.html" class="nav-link">Evangelism</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="mission.html" class="nav-link">Mission</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="campus_ministry.html" class="nav-link">Campus Ministry</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="well_come.html" class="nav-link">Well.come</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="harvest_school_ministry.html" class="nav-link">Harvest School of
+                                    ministry</a>
+                            </li>
+                        </ul>
+                    </a>
+                </li>
                 <li class="nav-item"><a href="contact.html" class="nav-link change-Color">Contact</a></li>
             </ul>
             <div class="flex-space-between login-give">
@@ -135,6 +190,24 @@
                             <p>
                                 Never leave your friends behind, let them experience the goodness of God here at City
                                 Harvest.
+                            </p>
+                            <div class="card-btns">
+                                <a href="#" class="btn event">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-img">
+                            <div class="card-inner">
+                                <img src="../assets/img/get-involved/connect/connect.jpg" alt=""
+                                    class="card-img-top img-fluid">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h2>Connect</h2>
+                            <p>
+                                Grab a cup of tea and get to know each other, make friendship, fellowship unto
+                                partneship.
                             </p>
                             <div class="card-btns">
                                 <a href="#" class="btn event">Learn More</a>
@@ -250,7 +323,7 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h2>WELL.COM GROUPS</h2>
+                            <h2>WELL.COME GROUPS</h2>
                             <p>
                                 Fellowship with other members weekly in small groups.
                             </p>
