--- a/cityharvest/app/leaders.html
+++ b/cityharvest/app/leaders.html
@@ -19,7 +19,7 @@
     <!-- === AOS (Animation On Scroll CSS) CDN === -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- === Title === -->
-    <title>City Harvest Church | Contact</title>
+    <title>City Harvest Church | Leadership</title>
     <!-- === CSS === -->
     <link rel="stylesheet" type="text/css" href="../assets/css/leaders.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/main.css">
@@ -54,6 +54,17 @@
                             <li class="nav-item">
                                 <a href="beliefs.html" class="nav-link">What We Believe</a>
                             </li>
+                            <li class="nav-item dropdown-services">
+                                <a href="#" class="nav-link">Services <i class="fas fa-angle-down"></i></a>
+                                <ul class="dropdown-menu-services">
+                                    <li class="nav-item">
+                                        <a href="daycare.html" class="nav-link">Day Care</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="njopeka.html" class="nav-link">Njopeka Project</a>
+                                    </li>
+                                </ul>
+                            </li>
                             <li class="nav-item dropdown-location">
                                 <a href="#" class="nav-link">Locations <i class="fas fa-angle-down"></i></a>
                                 <ul class="dropdown-menu-location">
@@ -77,7 +88,21 @@
                         </ul>
                     </a>
                 </li>
-                <li class="nav-item"><a href="sermons.html" class="nav-link change-Color">Sermons</a></li>
+                <li class="nav-item dropdown-sermons">
+                    <a href="#" class="nav-link change-Color">Sermons
+                        <ul class="dropdown-menu-sermons">
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">Audio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="sermons.html" class="nav-link">Video</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="written_sermons.html" class="nav-link">Written Sermons</a>
+                            </li>
+                        </ul>
+                    </a>
+                </li>
                 <li class="nav-item"><a href="get_involved.html" class="nav-link change-Color">Get Involved</a></li>
                 <li class="nav-item dropdown-resources">
                     <a href="#" class="nav-link change-Color">Resources
@@ -88,14 +113,44 @@
                             <li class="nav-item">
                                 <a href="reports.html" class="nav-link">Reports</a>
                             </li>
-                            <li class="nav-item">
-                                <a href="written_sermons.html" class="nav-link">Written Sermons</a>
-                            </li>
                         </ul>
                     </a>
                 </li>
                 <li class="nav-item"><a href="events.html" class="nav-link change-Color">Events</a></li>
-                <li class="nav-item"><a href="#" class="nav-link change-Color">Ministries</a></li>
+                <li class="nav-item dropdown-ministries">
+                    <a href="#" class="nav-link change-Color">Ministries
+                        <ul class="dropdown-menu-ministries">
+                            <li class="nav-item">
+                                <a href="cmf.html" class="nav-link">CMF</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="wwk.html" class="nav-link">WWK</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="youth.html" class="nav-link">Youth</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="kids.html" class="nav-link">Children Ministry</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="evangelism.html" class="nav-link">Evangelism</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="mission.html" class="nav-link">Mission</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="campus_ministry.html" class="nav-link">Campus Ministry</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="well_come.html" class="nav-link">Well.come</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="harvest_school_ministry.html" class="nav-link">Harvest School of
+                                    ministry</a>
+                            </li>
+                        </ul>
+                    </a>
+                </li>
                 <li class="nav-item"><a href="contact.html" class="nav-link change-Color">Contact</a></li>
             </ul>
             <div class="flex-space-between login-give">
@@ -126,10 +181,10 @@
             <div class="container">
                 <h1 class="pastors-title">Lead Pastors</h1>
                 <div class="row even-columns">
-                    <div class="pastors-img" data-aos="zoom-in-up" data-aos-delay="100">
+                    <div class="pastors-img">
                         <img src="../assets/img/pastors/lead-pastors.png" alt="">
                     </div>
-                    <div class="pastors-txt" data-aos="zoom-in-up" data-aos-delay="100">
+                    <div class="pastors-txt">
                         <h1 class="lead"> WORD FROM OUR LEAD PASTORS</h1>
                         <h1>Rev. Arch. Yared Dondo & Pastor Matilda Dondo</h1>
                         <p class="text-justify">
